[package]
name = "dg_sysfs"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.170"
serde = { version = "1.0.218", features = ["derive"] }
simple_logger = "5.0.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
log = "0.4.26"
uuid = { version = "1.16.0", features = ["v4", "serde"] }