[package]
name = "dg_sysfs"
version = "1.1.2"
edition = "2024"
authors = ["James Hoerr"]
description = "Utils for working with SysFS in Garden OS"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/dg_sysfs_utils"
repository = "https://github.com/GalactechsLLC/dg_sysfs_utils"

[dependencies]
dg_logger = { version="2.1.1" }
libc = "0.2.170"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "time"] }
log = "0.4.26"
uuid = { version = "1.16.0", features = ["v4", "serde"] }